Fix for jumping path button tooltips; initial work on context popover

--- a/system/application/views/melons/cantaloupe/css/common.css
+++ b/system/application/views/melons/cantaloupe/css/common.css
@@ -308,7 +308,8 @@ ol.has_tags li:last-child:after { content: ""; }
 
 .path-nav { position: fixed; top: 50%; opacity: .25; }
 .path-nav img { width: 3.2rem; }
-.popover img.thumbnail { max-width: 12rem; max-height: 12rem; margin-bottom: 1rem; display: inline; }
+.popover { width: 20rem; }
+.popover img.thumbnail { max-width: 17rem; margin-bottom: 1rem; display: inline; }
 .path-nav:hover { opacity: .9; }
 .path-nav.left { left: 2.4rem; }
 .path-nav.right { right: 2.4rem; }
@@ -334,6 +335,11 @@ ol.has_tags li:last-child:after { content: ""; }
 
 .title_card > .path-breadcrumb > a {
 	color: white;
+}
+
+.header-controls-right {
+	margin-right: 7.2rem;
+	float: right;
 }
 
 p {
